# ai-agents-lx

./: .env.example  .gitignore  README.md  pyproject.toml
context/: onboarding.md
context/solver_playbooks/: action_plan.md  investigation.md  process_doc.md  recommendation.md
data/: capability_inventory.json
data/input/: problems.csv
data/mock/: gong_calls.json  salesforce_cases.json  slack_messages.json  wisdom_search_hits.json
docs/job_descriptions/: cataloger.md  hiring_manager.md  hypothesis_generator.md  orchestrator.md  pattern_analyzer.md  scout.md  solvability_evaluator.md  solver_router.md  structurer.md
src/psm/: __init__.py  config.py  main.py  server.py
src/psm/agents/: __init__.py  brief_generator.py  cataloger.py  hiring_manager.py  hypothesis_gen.py  invoker.py  orchestrator.py  pattern_analyzer.py  reverse_analyzer.py  scout.py  solvability_evaluator.py  solver_router.py  spec_generator.py  structurer.py
src/psm/agents/solvers/: __init__.py  base.py
src/psm/deploy/: __init__.py  base.py  local.py
src/psm/eval/: __init__.py  failure_codes.py  gate.py  runner.py  scorer.py  test_gen.py
src/psm/integrations/: __init__.py  base.py  gong.py  salesforce.py  slack.py  wisdom.py  wisdom_client.py
src/psm/schemas/: __init__.py  agent.py  brief.py  deployment.py  hypothesis.py  ingestion.py  pattern.py  pipeline_config.py  problem.py  run_history.py  solution.py  solvability.py  trial.py  work_log.py
src/psm/tools/: __init__.py  context_loader.py  csv_reader.py  data_store.py
tests/: test_solvability.py
