[project]
name = "problem-solution-mapping"
version = "0.1.0"
description = "Agent-as-New-Hire: Problem Solution Mapping with Claude Agent SDK"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.52.0",
    "pydantic>=2.0",
    "anyio>=4.0",
    "eval_type_backport>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Not imported by core PSM yet; install when wiring Claude Code SDK flows (needs Python >=3.10 + package availability).
claude-code = [
    "claude-code-sdk>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
psm = "psm.main:cli"
psm-server = "psm.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psm"]

[tool.ruff]
line-length = 100
